2000-12-15  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* goops/save.scm (load-objects):  eval-in-module is deprecated.
	Use eval instead.

2000-11-24  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* goops.scm:  Don't export removed %logand any more.

	* goops/dispatch.scm (cache-try-hash!):  Use logand instead of
	%logand.

2000-11-06  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* goops.scm (internal-add-method!): Set n-specialized of a generic
	function to the number of specializers regardless if it has rest
	args or not.

	* goops/dispatch.scm (method-cache-install!): Use n-specialized +
	1 args for type matching.  (Thanks to Lars J. Aas.)

2000-10-23  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* goops.scm (goops-error): Removed use of oldfmt.
